<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, IDoItActivity!</string>
    <string name="app_name">IDoIt</string>
    <string name="recommend">推荐</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="today">今天</string>
    <string name="future">往后</string>
    <string name="all">全部</string>
    <string name="pool">收集池</string>
    <string name="periodic">周期任务</string>
    <string name="TL_longclicked_edit">编辑</string>
    <string name="TL_longclicked_delete">删除</string>
    <string name="TL_longclicked_operations">操作</string>
    <string name="PT_pomo_quit_confirm">是，我要中断</string>
    <string name="PT_pomo_quit_cancel">不，继续努力</string>
    <string name="PT_pomo_quit_title">警告</string>
    <string name="PT_break_quit_title">询问</string>
    <string name="PT_break_quit_cancel">不，继续休息</string>
    <string name="PT_break_quit_confirm">是，休息结束</string>
    <string name="PT_break_quit_message">真的要停止吗，亲？停止将结束此次休息时间！</string>
    <string name="PT_pomo_quit_message">真的要退出吗，亲？退出将中断此次番茄时间！</string>
    <string name="settings_timer">时间设置</string>
    <string name="settings_pomotime">番茄时间：</string>
    <string name="settings_shortbreak">短休息时间：</string>
    <string name="settings_longbreak">长休息时间：</string>
    <string name="settings_longbreak_interval">长休息间隔番茄数：</string>
    <string name="settings_minute">分钟</string>
    <string name="settings_count">个</string>
    <string name="settings_notify">提醒设置</string>
    <string name="settings_vibrate">震动</string>
    <string name="settings_open">开启</string>
    <string name="settings_close">关闭</string>
    <string name="settings_sound">提示音：</string>
    <string name="Detail_name_edit_hint">名称</string>
    <string name="Detail_memo_edit_hint">备注</string>
    <string name="Detail_period_intro_text">重复任务</string>
    <string name="Detail_starttime_intro_text">开始时间</string>
    <string name="Detail_deadline_intro_text">截止时间</string>
    <string name="Detail_priority_intro_text">优先级</string>
    <string name="Detail_tag_intro_text">标签</string>
    <string name="Detail_context_intro_text">地点</string>
    <string name="Detail_alarm_intro_text">提醒</string>
    <string name="Detail_previous_intro_text">前驱任务</string>
    <string name="Detail_following_intro_text">后续任务</string>
    <string name="Detail_state_intro_text">当前状态</string>
    <string name="Detail_pasttime_intro_text">已经努力了</string>
    <string name="Detail_totaltime_intro_text">预计将耗费</string>
    <string name="Detail_interrupt_intro_text">中断次数</string>
    <string name="Detail_high_priority_text">高</string>
    <string name="Detail_middle_priority_text">中</string>
    <string name="Detail_low_priority_text">低</string>
    <string name="Dialog_confirm_text">确认</string>
    <string name="Dialog_cancel_text">取消</string>
    <string name="Detail_none">无</string>
    <string name="Detail_unset">未设置</string>
    <string name="Dialog_neutral_text">清除</string>
    <string name="about_dialog_title">About iDoIt</string>
    <string name="about_dialog_content">By 5 idiots from TJU</string>
    <string name="Detail_state_normal">普通</string>
    <string name="Detail_state_finished">已完成</string>
    <string name="Detail_state_deleted">已删除</string>

</resources>
