<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/dialog_set_priority_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Detail_high_priority_text"
            android:textColor="@color/high_priority" />

        <RadioButton
            android:id="@+id/dialog_set_priority_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Detail_middle_priority_text"
            android:textColor="@color/mid_priority" />

        <RadioButton
            android:id="@+id/dialog_set_priority_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Detail_low_priority_text"
            android:textColor="@color/low_priority" />

        <RadioButton
            android:id="@+id/dialog_set_priority_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Detail_unset" />
    </RadioGroup>

</ScrollView>