<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radioGroup1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RadioButton
        android:id="@+id/dialog_set_state_normalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/Detail_state_normal" />

    <RadioButton
        android:id="@+id/dialog_set_state_finishedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Detail_state_finished" />

    <RadioButton
        android:id="@+id/dialog_set_state_deletedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Detail_state_deleted" />

</RadioGroup>