<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="30dp" >

    <!-- 第一部分，name + memo -->

    <RelativeLayout
        android:id="@+id/nameMemoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whitesmoke" >

        <EditText
            android:id="@+id/taskNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Detail_name_edit_hint" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/taskMemoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/taskNameEditText"
            android:ems="10"
            android:hint="@string/Detail_memo_edit_hint"
            android:inputType="textMultiLine" />
    </RelativeLayout>

    <!-- 分隔符1 -->

    <View
        android:id="@+id/seperator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/nameMemoLayout"
        android:layout_margin="10dp"
        android:background="@android:color/darker_gray" />

    <!-- 第二部分，任务时间相关 -->

    <RelativeLayout
        android:id="@+id/taskTimeDetailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seperator1"
        android:background="@color/whitesmoke" >

        <!-- 周期相关信息 -->

        <RelativeLayout
            android:id="@+id/periodicInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/whitesmoke" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/Detail_period_intro_text" />

            <TextView
                android:id="@+id/taskPeriodicInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="PERIODIC_INFO"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/blue" />
        </RelativeLayout>

        <!-- 开始时间 -->

        <RelativeLayout
            android:id="@+id/startTimeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/periodicInfoLayout"
            android:layout_margin="5dp"
            android:background="@color/whitesmoke" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/Detail_starttime_intro_text" />

            <TextView
                android:id="@+id/taskStartTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="START_TIME"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/blue" />
        </RelativeLayout>

        <!-- 截止时间 -->

        <RelativeLayout
            android:id="@+id/deadlineLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startTimeLayout"
            android:layout_margin="5dp"
            android:background="@color/whitesmoke" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/Detail_deadline_intro_text" />

            <TextView
                android:id="@+id/taskDeadlineTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="DEADLINE"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/blue" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>